--- a/crates/rwkv-bench/Cargo.toml
+++ b/crates/rwkv-bench/Cargo.toml
@@ -5,4 +5,12 @@ edition = "2024"
 description = "RWKV is an RNN with great LLM performance and parallelizable like a Transformer"
 license = "Apache-2.0"
 
+[features]
+default = []
+hotpath = ["dep:hotpath", "hotpath/hotpath"]
+hotpath-alloc-bytes-total = ["hotpath", "hotpath/hotpath-alloc-bytes-total"]
+hotpath-alloc-count-total = ["hotpath", "hotpath/hotpath-alloc-count-total"]
+hotpath-off = ["hotpath", "hotpath/hotpath-off"]
+
 [dependencies]
+hotpath = { workspace = true, optional = true }
