--- a/crates/rwkv-derive/Cargo.toml
+++ b/crates/rwkv-derive/Cargo.toml
@@ -5,4 +5,10 @@ edition = "2024"
 description = "RWKV is an RNN with great LLM performance and parallelizable like a Transformer"
 license = "Apache-2.0"
 
+[lib]
+proc-macro = true
+
 [dependencies]
+proc-macro2 = { workspace = true }
+quote = { workspace = true }
+syn = { workspace = true }
