--- a/crates/rwkv-train-cli/Cargo.toml
+++ b/crates/rwkv-train-cli/Cargo.toml
@@ -5,4 +5,76 @@ edition = "2024"
 description = "RWKV is an RNN with great LLM performance and parallelizable like a Transformer"
 license = "Apache-2.0"
 
+[features]
+# Backend features for auto-adaptation
+backend_cuda = ["burn/cuda"]
+backend_metal = ["burn/metal"]
+backend_wgpu = ["burn/wgpu"]
+backend_ndarray = ["burn/ndarray"]
+
+# Default feature for different platforms
+default = []
+hotpath = ["dep:hotpath", "rwkv-lm/hotpath", "rwkv-bench/hotpath", "hotpath/hotpath"]
+hotpath-alloc-bytes-total = [
+    "hotpath",
+    "rwkv-lm/hotpath-alloc-bytes-total",
+    "rwkv-bench/hotpath-alloc-bytes-total",
+    "hotpath/hotpath-alloc-bytes-total",
+]
+hotpath-alloc-count-total = [
+    "hotpath",
+    "rwkv-lm/hotpath-alloc-count-total",
+    "rwkv-bench/hotpath-alloc-count-total",
+    "hotpath/hotpath-alloc-count-total",
+]
+hotpath-off = [
+    "hotpath",
+    "rwkv-lm/hotpath-off",
+    "rwkv-bench/hotpath-off",
+    "hotpath/hotpath-off",
+]
+
 [dependencies]
+# === Deep Learning Core ===
+burn = { workspace = true }
+burn-train = { workspace = true }
+burn-optim = { workspace = true }
+
+# === Serialization ===
+serde = { workspace = true }
+toml = { workspace = true }
+
+# === CLI ===
+clap = { workspace = true }
+log = { workspace = true }
+chrono = { workspace = true }
+clia-tracing-config = "*"
+
+# === Async Runtime ===
+tokio = { workspace = true }
+rayon = { workspace = true }
+futures = { workspace = true }
+async-trait = { workspace = true }
+
+# === Data Processing ===
+hashbrown = { workspace = true }
+regex = { workspace = true }
+
+# === Database ===
+redb = { workspace = true }
+redis = { workspace = true }
+
+# === Utilities ===
+primes = { workspace = true }
+dialoguer = { workspace = true }
+
+# === Monitoring ===
+wandb = { workspace = true }
+indicatif = { workspace = true }
+hotpath = { workspace = true, optional = true }
+
+# === Local Dependencies ===
+rwkv-lm = { path = "../rwkv-lm" }
+rwkv-data = { path = "../rwkv-data" }
+rwkv-config = { path = "../rwkv-config" }
+rwkv-bench = { path = "../rwkv-bench" }
