docs(docs_for_agents): 优化工程细节, 与llm协同开发

--- a/crates/rwkv-agent/Cargo.toml
+++ b/crates/rwkv-agent/Cargo.toml
@@ -2,7 +2,7 @@
 name = "rwkv-agent"
 version = "0.1.0"
 edition = "2024"
-description = "RWKV is an RNN with great LLM performance and parallelizable like a Transformer"
+description = "Scaffolding for the forthcoming RWKV agent runtime bridging inference, tools, and memory"
 license = "Apache-2.0"
 
 [dependencies]
