--- a/crates/rwkv-prompt/Cargo.toml
+++ b/crates/rwkv-prompt/Cargo.toml
@@ -2,7 +2,7 @@
 name = "rwkv-prompt"
 version = "0.1.0"
 edition = "2024"
-description = "RWKV is an RNN with great LLM performance and parallelizable like a Transformer"
+description = "Placeholder crate for RWKV prompt templates, routing rules, and conversation state"
 license = "Apache-2.0"
 
 [dependencies]
