--- a/crates/rwkv-bench/Cargo.toml
+++ b/crates/rwkv-bench/Cargo.toml
@@ -2,7 +2,7 @@
 name = "rwkv-bench"
 version = "0.1.0"
 edition = "2024"
-description = "RWKV is an RNN with great LLM performance and parallelizable like a Transformer"
+description = "Shared hotpath instrumentation macros and helpers for profiling RWKV workloads"
 license = "Apache-2.0"
 
 [features]
