--- a/crates/rwkv-derive/Cargo.toml
+++ b/crates/rwkv-derive/Cargo.toml
@@ -2,7 +2,7 @@
 name = "rwkv-derive"
 version = "0.1.0"
 edition = "2024"
-description = "RWKV is an RNN with great LLM performance and parallelizable like a Transformer"
+description = "Procedural macros (LineRef, ConfigBuilder) for rwkv-rs configuration and mmap models"
 license = "Apache-2.0"
 
 [lib]
