--- a/crates/rwkv-eval/Cargo.toml
+++ b/crates/rwkv-eval/Cargo.toml
@@ -2,7 +2,7 @@
 name = "rwkv-eval"
 version = "0.1.0"
 edition = "2024"
-description = "RWKV is an RNN with great LLM performance and parallelizable like a Transformer"
+description = "Evaluation harness placeholder for running benchmark suites against RWKV models"
 license = "Apache-2.0"
 
 [dependencies]
