--- a/crates/rwkv-export/Cargo.toml
+++ b/crates/rwkv-export/Cargo.toml
@@ -2,7 +2,7 @@
 name = "rwkv-export"
 version = "0.1.0"
 edition = "2024"
-description = "RWKV is an RNN with great LLM performance and parallelizable like a Transformer"
+description = "Utilities for exporting RWKV checkpoints between PyTorch .pth and Burn MPK formats"
 license = "Apache-2.0"
 
 [dependencies]
