--- a/crates/rwkv/Cargo.toml
+++ b/crates/rwkv/Cargo.toml
@@ -2,7 +2,7 @@
 name = "rwkv"
 version = "0.1.0"
 edition = "2024"
-description = "RWKV is an RNN with great LLM performance and parallelizable like a Transformer"
+description = "Facade crate that re-exports rwkv-rs training, inference, data, and agent APIs"
 license = "Apache-2.0"
 
 [dependencies]
