--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ version = "0.1.0"
 [workspace.dependencies]
 # === Core Infrastructure ===
 tokio = { version = "1.48.0", features = ["full"] }
+tokio-stream = { version = "0.1", features = ["sync"] }
 rayon = { version = "1.11.0" }
 futures = { version = "0.3.31" }
 async-trait = { version = "0.1.89" }
@@ -33,13 +34,20 @@ bytemuck = { version = "1.24.0", features = ["derive", "extern_crate_alloc"] }
 bio = { version = "3.0.0" }
 csv = { version = "1.4.0" }
 memmap2 = "0.9.9 "
+memfd = { version = "0.6.4" }
 glob = "0.3.3"
 serde = { version = "1.0", features = ["derive"] }
+serde_json = { version = "1.0" }
 sonic-rs = { version = "0.5.5" }
 hashbrown = { version = "0.16.0" }
 csv-async = { version = "1.3.1", features = ["tokio"] }
 parquet = { version = "57.0.0", features = ["async"] }
 toml = { version = "0.9.7" }
+tempfile = { version = "3.12.0" }
+divan = { version = "0.1.13" }
+half = { version = "2.4.1" }
+safetensors = { version = "0.6.2" }
+gguf-rs-lib = { version = "0.2.5" }
 
 # === Database ===
 redis = { version = "1.0.0-rc.1", features = ["default", "r2d2", "ahash", "tokio-comp"] }
@@ -48,9 +56,9 @@ redb = { version = "3.0.2" }
 # === Utilities ===
 dialoguer = { version = "0.12.0" }
 primes = { version = "0.4.0" }
-regex = { version = "1.11.2" }
+regex = { version = "1.12.2" }
 unescape = { version = "0.1.0" }
-zstd = { version = "0.13" }
+zstd = { version = "0.13.3" }
 itertools = { version = "0.14.0" }
 walkdir = { version = "2.5.0" }
 derive-new = { version = "0.7.0" }
@@ -67,8 +75,8 @@ syn = { version = "2.0", features = ["full"] }
 clap = { version = "4", features = ["derive"] }
 log = "0.4"
 chrono = { version = "0.4", features = ["clock"] }
-clia-tracing-config = "*"
-indicatif = { version = "0.18.0", features = ["tokio"] }
+clia-tracing-config = "0.2.7"
+indicatif = { version = "0.18.2", features = ["tokio"] }
 wandb = { path = "./dependencies/wandb-rs" }
 
 # === Deep Learning Core ===
@@ -81,20 +89,31 @@ wandb = { path = "./dependencies/wandb-rs" }
 #burn-import = { git = "https://github.com/tracel-ai/burn", rev = "b51c1ac7d7a917d9f27cc9f8e9609bdfc275a287" }
 #burn-store = { git = "https://github.com/tracel-ai/burn", rev = "b51c1ac7d7a917d9f27cc9f8e9609bdfc275a287" }
 
-burn = { path = "./dependencies/burn/crates/burn", features = [
+#burn = { path = "./dependencies/burn/crates/burn", features = [
+#    "train", "autodiff", "ndarray", "cuda", "wgpu", "cubecl", "collective",
+#] }
+#burn-train = { path = "./dependencies/burn/crates/burn-train" }
+#burn-fusion = { path = "./dependencies/burn/crates/burn-fusion" }
+#burn-cubecl = { path = "./dependencies/burn/crates/burn-cubecl" }
+#burn-ir = { path = "./dependencies/burn/crates/burn-ir" }
+#burn-store = { path = "./dependencies/burn/crates/burn-store" }
+#burn-optim = { path = "./dependencies/burn/crates/burn-optim" }
+
+burn = { version = "0.19.0", features = [
     "train", "autodiff", "ndarray", "cuda", "wgpu", "cubecl", "collective",
 ] }
-burn-train = { path = "./dependencies/burn/crates/burn-train" }
-burn-fusion = { path = "./dependencies/burn/crates/burn-fusion" }
-burn-cubecl = { path = "./dependencies/burn/crates/burn-cubecl" }
-burn-ir = { path = "./dependencies/burn/crates/burn-ir" }
-burn-store = { path = "./dependencies/burn/crates/burn-store" }
-burn-optim = { path = "./dependencies/burn/crates/burn-optim" }
+burn-train = { version = "0.19.0" }
+burn-fusion = { version = "0.19.0" }
+burn-cubecl = { version = "0.19.0" }
+burn-ir = { version = "0.19.0" }
+burn-store = { version = "0.19.0" }
+burn-optim = { version = "0.19.0" }
 
 ndarray = { version = "0.16.1" }
 ndarray-npy = { version = "0.9.1" }
 
-hotpath = { version = "0.5.2" }
+tch = { version = "0.22.0" }
+hotpath = { version = "0.5.3" }
 
 
 [profile.release]
