feat(rwkv-data): 添加对binidx旧版本的支持

--- a/crates/rwkv-data/Cargo.toml
+++ b/crates/rwkv-data/Cargo.toml
@@ -38,6 +38,7 @@ unicode-segmentation = { workspace = true }
 unicode-script = { workspace = true }
 unicode-normalization = { workspace = true }
 zstd = { workspace = true }
+log = { workspace = true }
 
 burn = { workspace = true }
 
