feat(dependencies): 添加对burn 0.20.0-pre5和hotpath 0.9.0的支持

--- a/crates/rwkv-bench/Cargo.toml
+++ b/crates/rwkv-bench/Cargo.toml
@@ -8,8 +8,8 @@ license = "Apache-2.0"
 [features]
 default = []
 hotpath = ["dep:hotpath", "hotpath/hotpath"]
-hotpath-alloc-bytes-total = ["hotpath", "hotpath/hotpath-alloc-bytes-total"]
-hotpath-alloc-count-total = ["hotpath", "hotpath/hotpath-alloc-count-total"]
+hotpath-alloc-bytes-total = ["hotpath", "hotpath/hotpath-alloc"]
+hotpath-alloc-count-total = ["hotpath", "hotpath/hotpath-alloc"]
 hotpath-off = ["hotpath", "hotpath/hotpath-off"]
 
 [dependencies]
