--- a/crates/rwkv-train-cli/Cargo.toml
+++ b/crates/rwkv-train-cli/Cargo.toml
@@ -19,13 +19,13 @@ hotpath-alloc-bytes-total = [
     "hotpath",
     "rwkv-lm/hotpath-alloc-bytes-total",
     "rwkv-bench/hotpath-alloc-bytes-total",
-    "hotpath/hotpath-alloc-bytes-total",
+    "hotpath/hotpath-alloc",
 ]
 hotpath-alloc-count-total = [
     "hotpath",
     "rwkv-lm/hotpath-alloc-count-total",
     "rwkv-bench/hotpath-alloc-count-total",
-    "hotpath/hotpath-alloc-count-total",
+    "hotpath/hotpath-alloc",
 ]
 hotpath-off = [
     "hotpath",
