--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,20 +33,20 @@ xxhash-rust = { version = "0.8.15", features = ["xxh3"] }
 bytemuck = { version = "1.24.0", features = ["derive", "extern_crate_alloc"] }
 bio = { version = "3.0.0" }
 csv = { version = "1.4.0" }
-memmap2 = "0.9.9 "
-memfd = { version = "0.6.4" }
+memmap2 = "0.9.9"
+memfd = { version = "0.6.5" }
 glob = "0.3.3"
-serde = { version = "1.0", features = ["derive"] }
-serde_json = { version = "1.0" }
-sonic-rs = { version = "0.5.5" }
-hashbrown = { version = "0.16.0" }
+serde = { version = "1.0.228", features = ["derive"] }
+serde_json = { version = "1.0.147" }
+sonic-rs = { version = "0.5.6" }
+hashbrown = { version = "0.16.1" }
 csv-async = { version = "1.3.1", features = ["tokio"] }
-parquet = { version = "57.0.0", features = ["async"] }
-toml = { version = "0.9.7" }
-tempfile = { version = "3.12.0" }
-divan = { version = "0.1.13" }
-half = { version = "2.4.1" }
-safetensors = { version = "0.6.2" }
+parquet = { version = "57.1.0", features = ["async"] }
+toml = { version = "0.9.10+spec-1.1.0" }
+tempfile = { version = "3.24.0" }
+divan = { version = "0.1.21" }
+
+safetensors = { version = "0.7.0" }
 gguf-rs-lib = { version = "0.2.5" }
 
 # === Database ===
@@ -64,19 +64,19 @@ walkdir = { version = "2.5.0" }
 derive-new = { version = "0.7.0" }
 
 unicode-segmentation = "1.12.0"
-unicode-script = "0.5.7"
+unicode-script = "0.5.8"
 unicode-normalization = "0.1.25"
 
-proc-macro2 = "1.0"
-quote = "1.0"
-syn = { version = "2.0", features = ["full"] }
+proc-macro2 = "1.0.103"
+quote = "1.0.42"
+syn = { version = "2.0.111", features = ["full"] }
 
 # === CLI & Monitoring ===
-clap = { version = "4", features = ["derive"] }
+clap = { version = "4.5.53", features = ["derive"] }
 log = "0.4"
-chrono = { version = "0.4", features = ["clock"] }
+chrono = { version = "0.4.42", features = ["clock"] }
 clia-tracing-config = "0.2.7"
-indicatif = { version = "0.18.2", features = ["tokio"] }
+indicatif = { version = "0.18.3", features = ["tokio"] }
 wandb = { path = "./dependencies/wandb-rs" }
 
 # === Deep Learning Core ===
@@ -99,20 +99,20 @@ wandb = { path = "./dependencies/wandb-rs" }
 #burn-store = { path = "./dependencies/burn/crates/burn-store" }
 #burn-optim = { path = "./dependencies/burn/crates/burn-optim" }
 
-burn = { version = "0.20.0-pre.5", features = [
+burn = { version = "0.20.0-pre.6", features = [
     "train", "autodiff", "ndarray", "cuda", "wgpu", "cubecl", "collective",
 ] }
-burn-train = { version = "0.20.0-pre.5" }
-burn-fusion = { version = "0.20.0-pre.5" }
-burn-cubecl = { version = "0.20.0-pre.5" }
-burn-ir = { version = "0.20.0-pre.5" }
-burn-store = { version = "0.20.0-pre.5" }
-burn-optim = { version = "0.20.0-pre.5" }
+burn-train = { version = "0.20.0-pre.6" }
+burn-fusion = { version = "0.20.0-pre.6" }
+burn-cubecl = { version = "0.20.0-pre.6" }
+burn-ir = { version = "0.20.0-pre.6" }
+burn-store = { version = "0.20.0-pre.6" }
+burn-optim = { version = "0.20.0-pre.6" }
 
 ndarray = { version = "0.16.1" }
 ndarray-npy = { version = "0.9.1" }
 
-hotpath = { version = "0.9.0" }
+hotpath = { version = "0.9.2" }
 
 
 [profile.release]
