--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,9 +4,6 @@ members = [
     "./crates/*",
     "./examples/*"
 ]
-exclude = [
-    "dependencies/burn"
-]
 
 [workspace.package]
 edition = "2024"
@@ -18,8 +15,8 @@ version = "0.1.0"
 
 [workspace.dependencies]
 # === Core Infrastructure ===
-tokio = { version = "1.48.0", features = ["full"] }
-tokio-stream = { version = "0.1", features = ["sync"] }
+tokio = { version = "1.49.0", features = ["full"] }
+tokio-stream = { version = "0.1.18", features = ["sync"] }
 rayon = { version = "1.11.0" }
 futures = { version = "0.3.31" }
 async-trait = { version = "0.1.89" }
@@ -37,7 +34,7 @@ memmap2 = "0.9.9"
 memfd = { version = "0.6.5" }
 glob = "0.3.3"
 serde = { version = "1.0.228", features = ["derive"] }
-serde_json = { version = "1.0.147" }
+serde_json = { version = "1.0.149" }
 sonic-rs = { version = "0.5.6" }
 hashbrown = { version = "0.16.1" }
 csv-async = { version = "1.3.1", features = ["tokio"] }
@@ -50,7 +47,7 @@ safetensors = { version = "0.7.0" }
 gguf-rs-lib = { version = "0.2.5" }
 
 # === Database ===
-redis = { version = "1.0.0-rc.2", features = ["default", "r2d2", "ahash", "tokio-comp"] }
+redis = { version = "1.0.2", features = ["default", "r2d2", "ahash", "tokio-comp"] }
 redb = { version = "3.1.0" }
 
 # === Utilities ===
@@ -67,38 +64,19 @@ unicode-segmentation = "1.12.0"
 unicode-script = "0.5.8"
 unicode-normalization = "0.1.25"
 
-proc-macro2 = "1.0.103"
-quote = "1.0.42"
-syn = { version = "2.0.111", features = ["full"] }
+proc-macro2 = "1.0.105"
+quote = "1.0.43"
+syn = { version = "2.0.113", features = ["full"] }
 
 # === CLI & Monitoring ===
-clap = { version = "4.5.53", features = ["derive"] }
-log = "0.4"
+clap = { version = "4.5.54", features = ["derive"] }
+log = "0.4.29"
 chrono = { version = "0.4.42", features = ["clock"] }
 clia-tracing-config = "0.2.7"
 indicatif = { version = "0.18.3", features = ["tokio"] }
-wandb = { path = "./dependencies/wandb-rs" }
+wandb = { git = "https://github.com/rwkv-rs/wandb-rs", rev = "5d9ab26376a5ac70f779a0fa78e137d3779a1ba2" }
 
 # === Deep Learning Core ===
-#burn = { git = "https://github.com/tracel-ai/burn", features = [
-#    "train", "autodiff", "ndarray", "cuda", "wgpu", "cubecl"
-#], rev = "b51c1ac7d7a917d9f27cc9f8e9609bdfc275a287" }
-#burn-fusion = { git = "https://github.com/tracel-ai/burn", rev = "b51c1ac7d7a917d9f27cc9f8e9609bdfc275a287" }
-#burn-cubecl = { git = "https://github.com/tracel-ai/burn", rev = "b51c1ac7d7a917d9f27cc9f8e9609bdfc275a287" }
-#burn-ir = { git = "https://github.com/tracel-ai/burn", rev = "b51c1ac7d7a917d9f27cc9f8e9609bdfc275a287" }
-#burn-import = { git = "https://github.com/tracel-ai/burn", rev = "b51c1ac7d7a917d9f27cc9f8e9609bdfc275a287" }
-#burn-store = { git = "https://github.com/tracel-ai/burn", rev = "b51c1ac7d7a917d9f27cc9f8e9609bdfc275a287" }
-
-#burn = { path = "./dependencies/burn/crates/burn", features = [
-#    "train", "autodiff", "ndarray", "cuda", "wgpu", "cubecl", "collective",
-#] }
-#burn-train = { path = "./dependencies/burn/crates/burn-train" }
-#burn-fusion = { path = "./dependencies/burn/crates/burn-fusion" }
-#burn-cubecl = { path = "./dependencies/burn/crates/burn-cubecl" }
-#burn-ir = { path = "./dependencies/burn/crates/burn-ir" }
-#burn-store = { path = "./dependencies/burn/crates/burn-store" }
-#burn-optim = { path = "./dependencies/burn/crates/burn-optim" }
-
 burn = { version = "0.20.0-pre.6", features = [
     "train", "autodiff", "ndarray", "cuda", "wgpu", "cubecl", "collective",
 ] }
@@ -109,8 +87,8 @@ burn-ir = { version = "0.20.0-pre.6" }
 burn-store = { version = "0.20.0-pre.6" }
 burn-optim = { version = "0.20.0-pre.6" }
 
-ndarray = { version = "0.16.1" }
-ndarray-npy = { version = "0.9.1" }
+ndarray = { version = "0.17.1" }
+ndarray-npy = { version = "0.10.0" }
 
 hotpath = { version = "0.9.2" }
 
