--- a/Cargo.toml
+++ b/Cargo.toml
@@ -38,8 +38,8 @@ serde_json = { version = "1.0.149" }
 sonic-rs = { version = "0.5.6" }
 hashbrown = { version = "0.16.1" }
 csv-async = { version = "1.3.1", features = ["tokio"] }
-parquet = { version = "57.1.0", features = ["async"] }
-toml = { version = "0.9.10+spec-1.1.0" }
+parquet = { version = "57.2.0", features = ["async"] }
+toml = { version = "0.9.11+spec-1.1.0" }
 tempfile = { version = "3.24.0" }
 divan = { version = "0.1.21" }
 
@@ -66,26 +66,26 @@ unicode-normalization = "0.1.25"
 
 proc-macro2 = "1.0.105"
 quote = "1.0.43"
-syn = { version = "2.0.113", features = ["full"] }
+syn = { version = "2.0.114", features = ["full"] }
 
 # === CLI & Monitoring ===
 clap = { version = "4.5.54", features = ["derive"] }
 log = "0.4.29"
-chrono = { version = "0.4.42", features = ["clock"] }
+chrono = { version = "0.4.43", features = ["clock"] }
 clia-tracing-config = "0.2.7"
 indicatif = { version = "0.18.3", features = ["tokio"] }
 wandb = { git = "https://github.com/rwkv-rs/wandb-rs", rev = "5d9ab26376a5ac70f779a0fa78e137d3779a1ba2" }
 
 # === Deep Learning Core ===
-burn = { version = "0.20.0-pre.6", features = [
+burn = { version = "0.20.0", features = [
     "train", "autodiff", "ndarray", "cuda", "wgpu", "cubecl", "collective",
 ] }
-burn-train = { version = "0.20.0-pre.6" }
-burn-fusion = { version = "0.20.0-pre.6" }
-burn-cubecl = { version = "0.20.0-pre.6" }
-burn-ir = { version = "0.20.0-pre.6" }
-burn-store = { version = "0.20.0-pre.6" }
-burn-optim = { version = "0.20.0-pre.6" }
+burn-train = { version = "0.20.0" }
+burn-fusion = { version = "0.20.0" }
+burn-cubecl = { version = "0.20.0" }
+burn-ir = { version = "0.20.0" }
+burn-store = { version = "0.20.0" }
+burn-optim = { version = "0.20.0" }
 
 ndarray = { version = "0.17.1" }
 ndarray-npy = { version = "0.10.0" }
