--- a/crates/rwkv-train/Cargo.toml
+++ b/crates/rwkv-train/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "rwkv-train-cli"
+name = "rwkv-train"
 version = "0.1.0"
 edition = "2024"
 description = "Distributed training CLI orchestrating data pipelines, Burn trainers, and logging tools"
