chore: wip sync

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -77,15 +77,13 @@ indicatif = { version = "0.18.3", features = ["tokio"] }
 wandb = { git = "https://github.com/rwkv-rs/wandb-rs", rev = "5d9ab26376a5ac70f779a0fa78e137d3779a1ba2" }
 
 # === Deep Learning Core ===
-burn = { version = "0.20.0", features = [
-    "train", "autodiff", "ndarray", "cuda", "wgpu", "cubecl", "collective",
-] }
-burn-train = { version = "0.20.0" }
-burn-fusion = { version = "0.20.0" }
-burn-cubecl = { version = "0.20.0" }
-burn-ir = { version = "0.20.0" }
-burn-store = { version = "0.20.0" }
-burn-optim = { version = "0.20.0" }
+burn = { version = "0.20.0", default-features = false }
+burn-train = { version = "0.20.0", default-features = false }
+burn-fusion = { version = "0.20.0", default-features = false }
+burn-cubecl = { version = "0.20.0", default-features = false }
+burn-ir = { version = "0.20.0", default-features = false }
+burn-store = { version = "0.20.0", default-features = false }
+burn-optim = { version = "0.20.0", default-features = false }
 
 ndarray = { version = "0.17.2" }
 ndarray-npy = { version = "0.10.0" }
