chore: wip sync (refactor TokenUnitDType and update related usage)
Moved TokenUnitDType definition to rwkv-config and updated all references to use the new location. Removed MmapTokenDtypeOptions in favor of TokenUnitDType. Updated Cargo.toml features and dependencies for consistency. Refactored code in data loading, training, and example scripts to use the new TokenUnitDType and related API changes.

--- a/crates/rwkv-data/Cargo.toml
+++ b/crates/rwkv-data/Cargo.toml
@@ -44,6 +44,7 @@ burn = { workspace = true, default-features = false, features = ["std"] }
 
 # === Local Dependencies ===
 rwkv-derive = { path = "../rwkv-derive" }
+rwkv-config = { path = "../rwkv-config" }
 
 [dev-dependencies]
 tempfile = "3.0"
