--- a/crates/rwkv-train/Cargo.toml
+++ b/crates/rwkv-train/Cargo.toml
@@ -29,22 +29,18 @@ cubecl = ["burn/cubecl"]
 autotune = ["burn/autotune"]
 autotune-checks = ["burn/autotune-checks"]
 
-backend_ndarray = ["burn/ndarray"]
-ndarray = ["backend_ndarray"]
+ndarray = ["burn/ndarray"]
 accelerate = ["burn/accelerate"]
 blas-netlib = ["burn/blas-netlib"]
 openblas = ["burn/openblas"]
 openblas-system = ["burn/openblas-system"]
 simd = ["burn/simd"]
 tch = ["burn/tch"]
-backend_wgpu = ["burn/wgpu"]
-wgpu = ["backend_wgpu"]
+wgpu = ["burn/wgpu"]
 vulkan = ["wgpu", "burn/vulkan"]
 webgpu = ["wgpu", "burn/webgpu"]
-backend_metal = ["burn/metal"]
-metal = ["backend_metal"]
-backend_cuda = ["burn/cuda"]
-cuda = ["backend_cuda"]
+metal = ["wgpu", "burn/metal"]
+cuda = ["burn/cuda"]
 rocm = ["burn/rocm"]
 remote = ["burn/remote"]
 router = ["burn/router"]
