fix(examples/rwkv-lm):  Fixed the AutoRegressiveModel API and update dependencies
Fixed the AutoRegressiveModel API to simplify initialization and forward methods, and implemented TrainStep and InferenceStep traits. Updated l2wrap kernel signature and usage. Added 'log' as a dependency in rwkv-lm example, and updated 'quote' and 'proc-macro2' versions in Cargo.toml. Modernized the training pipeline in training.rs to use new model and optimizer APIs, and uncommented the old trainer example for reference.

--- a/examples/rwkv-lm/Cargo.toml
+++ b/examples/rwkv-lm/Cargo.toml
@@ -36,6 +36,7 @@ training = []
 pth2mpk = ["rwkv/store", "rwkv/cubecl"]
 
 [dependencies]
+log = "0.4.29"
 rwkv = { path = "../../crates/rwkv", features = [
     "data",
     "nn",
