fix(rwkv-train/common): Fixed device init logic and example naming
Refactored device initialization in CubeBackend to better handle WGPU devices and removed redundant backend-specific implementations. Renamed example file and updated README instructions to use 'rwkv-lm-train' for consistency. Enabled WandB upload in training config.

--- a/crates/rwkv-train/Cargo.toml
+++ b/crates/rwkv-train/Cargo.toml
@@ -30,12 +30,12 @@ cubecl = ["burn/cubecl", "dep:burn-cubecl"]
 autotune = ["burn/autotune"]
 autotune-checks = ["burn/autotune-checks"]
 
-wgpu = ["burn/wgpu"]
+wgpu = ["cubecl", "burn/wgpu"]
 vulkan = ["wgpu", "burn/vulkan"]
 webgpu = ["wgpu", "burn/webgpu"]
 metal = ["wgpu", "burn/metal"]
-cuda = ["burn/cuda"]
-rocm = ["burn/rocm"]
+cuda = ["cubecl", "burn/cuda"]
+rocm = ["cubecl", "burn/rocm"]
 cpu = ["burn/cpu"]
 
 hotpath = ["dep:hotpath", "rwkv-nn/hotpath", "rwkv-bench/hotpath", "hotpath/hotpath"]
