--- a/examples/rwkv-lm/config/train.toml
+++ b/examples/rwkv-lm/config/train.toml
@@ -23,7 +23,7 @@ grad_checkpoint = true
 
 level = "warn"
 use_tui = false
-upload_to_wandb = false
+upload_to_wandb = true
 wandb_api_key = "0846134e1a784dcd3495320a5ab21a73d2377a1d"
 wandb_entity_name = "rhineai"
 wandb_project_name = "lm"
