--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,7 +27,7 @@ dashmap = { version = "7.0.0-rc2" }
 xxhash-rust = { version = "0.8.15", features = ["xxh3"] }
 
 # === File & Serialization ===
-bytemuck = { version = "1.24.0", features = ["derive", "extern_crate_alloc"] }
+bytemuck = { version = "1.25.0", features = ["derive", "extern_crate_alloc"] }
 bio = { version = "3.0.0" }
 csv = { version = "1.4.0" }
 memmap2 = "0.9.9"
@@ -47,7 +47,7 @@ safetensors = { version = "0.7.0" }
 gguf-rs-lib = { version = "0.2.5" }
 
 # === Database ===
-redis = { version = "1.0.2", features = ["default", "r2d2", "ahash", "tokio-comp"] }
+redis = { version = "1.0.3", features = ["default", "r2d2", "ahash", "tokio-comp"] }
 redb = { version = "3.1.0" }
 
 # === Utilities ===
@@ -64,26 +64,27 @@ unicode-segmentation = "1.12.0"
 unicode-script = "0.5.8"
 unicode-normalization = "0.1.25"
 
-proc-macro2 = "1.0.105"
+proc-macro2 = "1.0.106"
 quote = "1.0.44"
 syn = { version = "2.0.114", features = ["full"] }
 
 # === CLI & Monitoring ===
-clap = { version = "4.5.54", features = ["derive"] }
+clap = { version = "4.5.56", features = ["derive"] }
 log = "0.4.29"
 chrono = { version = "0.4.43", features = ["clock"] }
 clia-tracing-config = "0.2.7"
 indicatif = { version = "0.18.3", features = ["tokio"] }
-wandb = { git = "https://github.com/rwkv-rs/wandb-rs", rev = "5d9ab26376a5ac70f779a0fa78e137d3779a1ba2" }
+wandb = { git = "https://github.com/rwkv-rs/wandb-rs", rev = "1633ca27afb4e09caca2e00d148ea239bc639a69" }
 
 # === Deep Learning Core ===
-burn = { version = "0.20", default-features = false }
-burn-train = { version = "0.20", default-features = false }
-burn-fusion = { version = "0.20", default-features = false }
-burn-cubecl = { version = "0.20", default-features = false }
-burn-ir = { version = "0.20", default-features = false }
-burn-store = { version = "0.20", default-features = false }
-burn-optim = { version = "0.20", default-features = false }
+burn = { version = "0.20.1", default-features = false }
+burn-train = { version = "0.20.1", default-features = false }
+burn-fusion = { version = "0.20.1", default-features = false }
+burn-cubecl = { version = "0.20.1", default-features = false }
+burn-ir = { version = "0.20.1", default-features = false }
+burn-store = { version = "0.20.1", default-features = false }
+burn-optim = { version = "0.20.1", default-features = false }
+burn-ndarray = { version = "0.20.1", default-features = false }
 
 ndarray = { version = "0.17.2" }
 ndarray-npy = { version = "0.10.0" }
