feat(rwkv-nn): add inference & rapid-sample
Large refactor and feature additions across crates:

- Renamed several "*_length"/"vocabulary_size" identifiers to shorter "*_len"/"vocab_size" (config, train, validated, processor, mmap, tokenizer, derive, trie, etc.) to standardize naming.
- Small local renames for unit/byte variables (unit_len/byte_len) in mmap readers/writers to improve clarity.
- Introduced causal inference support: added MultiCausalCellsInferenceState, a new infer path on MultiCausalCells, and wiring for context_mask and channel/time mixer inference state updates.
- Added context mask utilities and a context-aware token-shift diff to handle left-padding and masked timesteps correctly during inference.
- Implemented rapid-sample GPU support: new rapid_sample kernel, host launchers and Cube backend bindings to enable top-k/top-p sampling with optional penalties.
- Misc: updated tokenizer API name (load_vocab), adjusted various stats variable names (total_input_len/total_output_len), and minor fixes to module imports and function signatures.

These changes standardize naming, add inference-time state & masking utilities, and enable fast sampling on Cube backend devices.

--- a/examples/rwkv-lm/config/train.toml
+++ b/examples/rwkv-lm/config/train.toml
@@ -5,13 +5,11 @@ filename_without_extensions = "your_dataset_filename"
 dataset_format = "rwkv_legacy"
 random_seed = 42
 
-train_stage = "pretrain"
-
 num_nodes = 1
 num_devices_per_node = 1
 batch_size_per_device = 16
 num_dataset_repeats = 1
-context_length = 512
+context_len = 512
 
 optimizer = "adam_w"
 learning_rate_start = 6e-4
