--- a/examples/rwkv-lm/config/model.toml
+++ b/examples/rwkv-lm/config/model.toml
@@ -1,7 +1,7 @@
 model_type = "auto_regressive"
 
 num_cells = 12
-vocabulary_size = 65536
+vocab_size = 65536
 embedded_dim = 768
 num_heads = 12
 channel_mix_dim_scale = 4
