chore(rwkv-infer): [WIP SYNC]Add multi-model support and refactor infer engine
Introduce multi-model infer config and refactor the inference server/engine to support model routing and improved streaming. Key changes: replace single-model RawInferConfig fields with RawInferModelConfig and models list; add validation for model entries; integrate tokenizer into EngineRuntime and implement batched tokenization/prefill handling; add stop_suffixes to EngineCommand and propagate through SDK/server handlers; improve streaming emission logic to use generated bytes and stop suffix truncation; move SamplingConfig into types and extend penalties; add init module and service wiring, update server handlers to use RwkvInferApp/service; remove legacy backend/config modules and example server; update Cargo manifests and dependencies (workspace alignment). Misc: small tokenizer API (token_bytes) and other cleanup for multi-model deployment and streaming robustness.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,11 @@ tokio-stream = { version = "0.1.18", features = ["sync"] }
 rayon = { version = "1.11.0" }
 futures = { version = "0.3.31" }
 async-trait = { version = "0.1.89" }
+axum = { version = "0.7.9", features = ["macros", "tokio"] }
+tower-http = { version = "0.6.6", features = ["cors"] }
+tower = { version = "0.5.2" }
+uuid = { version = "1.18.1", features = ["v4", "serde"] }
+bytes = { version = "1.10.1" }
 
 # === Data Structures ===
 once_cell = { version = "1.21.3" }
