--- a/examples/rwkv-lm/Cargo.toml
+++ b/examples/rwkv-lm/Cargo.toml
@@ -40,23 +40,21 @@ ddp = ["rwkv/collective"]
 pth2mpk = ["rwkv/store", "rwkv/cubecl", "nn", "std"]
 training = ["rwkv/train", "rwkv/cubecl", "metrics", "std"]
 inferring = [
-    "dep:rwkv-infer",
     "dep:tokio",
     "dep:axum",
     "dep:clia-tracing-config",
-    "rwkv/data",
+    "rwkv/infer",
     "cubecl",
     "nn",
     "std"
 ]
 
 [dependencies]
-log = "0.4.29"
-sonic-rs = { version = "0.5.6" }
+log = { workspace = true }
+sonic-rs = { workspace = true }
 rwkv = { path = "../../crates/rwkv", default-features = false }
-rwkv-infer = { path = "../../crates/rwkv-infer", optional = true }
 tokio = { workspace = true, optional = true }
-axum = { version = "0.7.9", features = ["tokio"], optional = true }
+axum = { workspace = true, optional = true }
 clia-tracing-config = { workspace = true, optional = true }
 
 # Utils
