feat(rwkv-infer): Bump deps; add admin handler & runtime manager
Upgrade project dependencies and introduce server management pieces. Adds an admin HTTP handler and new service modules (service/builder.rs, service/runtime_manager.rs) for rwkv-infer, updates server routing/handlers and related types, and adjusts configs/examples. Also includes various internal updates across rwkv-config, rwkv-derive, rwkv-nn, rwkv-train, and example code to match dependency upgrades and new runtime features; Cargo.toml/Cargo.lock were updated accordingly.

--- a/examples/rwkv-lm/config/infer/rwkv-lm-7.2b.toml
+++ b/examples/rwkv-lm/config/infer/rwkv-lm-7.2b.toml
@@ -4,12 +4,12 @@ sse_keep_alive_ms = 10000
 
 [[models]]
 model_name = "rwkv"
-weights_path = "examples/rwkv-lm/weights/rwkv7-g1d-7.2b-20260131-ctx8192.mpk"
-tokenizer_vocab_path = "examples/rwkv-lm/assets/rwkv_vocab_v20230424.txt"
+model_cfg = "rwkv-lm-7.2b"
+weights_path = "../../weights/rwkv7-g1d-7.2b-20260131-ctx8192.mpk"
+tokenizer_vocab_path = "../../assets/rwkv_vocab_v20230424.txt"
 device_type = 0
 device_ids = [0]
 max_batch_size = 4
 max_context_len = 4096
 paragraph_len = 256
 decode_first = true
-
