--- a/crates/rwkv-infer/Cargo.toml
+++ b/crates/rwkv-infer/Cargo.toml
@@ -8,12 +8,10 @@ license = "Apache-2.0"
 [dependencies]
 tokio = { workspace = true }
 tokio-stream = { workspace = true }
-futures = { workspace = true }
-async-trait = { workspace = true }
 serde = { workspace = true, features = ["derive"] }
 serde_json = { workspace = true }
+toml = { workspace = true }
 uuid = { workspace = true }
-bytes = { workspace = true }
 
 # HTTP server (OpenAI-compatible)
 axum = { workspace = true }
