docs(examples/rwkv-lm): expand examples
Refactor auth to use axum::http::header::AUTHORIZATION constant for header lookup. Expand examples/rwkv-lm/README.md with clearer project overview, config layout, improved run instructions for different backends (cuda/wgpu/metal), inference API examples (endpoints, auth header, request samples) and admin hot-reload usage. Fix infer config to use the correct model_name ("rwkv-lm-7.2b"). These changes improve readability, developer UX for running the examples and ensure the infer config matches the documented model name.

--- a/examples/rwkv-lm/config/infer/rwkv-lm-7.2b.toml
+++ b/examples/rwkv-lm/config/infer/rwkv-lm-7.2b.toml
@@ -3,7 +3,7 @@ request_body_limit_bytes = 52428800
 sse_keep_alive_ms = 10000
 
 [[models]]
-model_name = "rwkv"
+model_name = "rwkv-lm-7.2b"
 model_cfg = "rwkv-lm-7.2b"
 weights_path = "../../weights/rwkv7-g1d-7.2b-20260131-ctx8192.mpk"
 tokenizer_vocab_path = "../../assets/rwkv_vocab_v20230424.txt"
