--- a/crates/rwkv-infer/Cargo.toml
+++ b/crates/rwkv-infer/Cargo.toml
@@ -9,7 +9,7 @@ license = "Apache-2.0"
 tokio = { workspace = true }
 tokio-stream = { workspace = true }
 serde = { workspace = true, features = ["derive"] }
-serde_json = { workspace = true }
+sonic-rs = { workspace = true }
 toml = { workspace = true }
 uuid = { workspace = true }
 
